Fix line break on Vercel

--- a/style.css
+++ b/style.css
@@ -56,8 +56,6 @@
       }
       .purple {
         color: rgb(194, 7, 194);
-          display: inline-block;
-  white-space: nowrap;
       }
       #element {
         color: rgb(194, 7, 194);
